convert header of header.php from CSS to Bootstrap5 and adding some animations on logo

--- a/header.css
+++ b/header.css
@@ -8,144 +8,12 @@ html{
    font-size: 62.5%;
    scroll-behavior:smooth;
 }
-body
-{
+body{
     font-family: 'Poppins', sans-serif;
 }
-.header{
-    background:#ccc;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 0 2rem;
-    width: 100%;
-    height: 8rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.header .menu-icon ion-icon{
-    font-size: 5rem;
-    color: #212529;
-    transition: all 0.4s ease-in;
-}
-.header .menu-icon ion-icon:hover{
-    font-size: 4rem;
-    color:crimson;
-}
-.header .title{
-    font-size: 3rem;
-    color: crimson;
-}
-.header .profile{
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-.profile .pic{
-    width: 7rem;
-    height: 7rem;
-    border-radius: 50%;
-}
-.pic img{
-    width: 100%;
-    border-radius: 50%;
-}
-.profile .icon ion-icon{
-    font-size: 2rem;
-    color: #212529;
-    transition: all 0.4s ease-in;
-}
-.profile .icon ion-icon.active{
-   transform:rotate(180deg);
-}
-.profile .icon ion-icon:hover{
-    color: crimson;
-}
-.sidebar{
-    position: relative;
-    padding: 1rem 1rem;
-    width: 38rem;
-    height: 100vh;
-    background: #000;
-    opacity: 80%;
-    transform: translateX(-100%);
-    transition: all 1s ease-in-out;
-}
-.sidebar.active{
-    z-index: 999;
-    transform: translateX(0%);
-}
-.sidebar .close-icon ion-icon{
-    font-size: 4rem;
-    color: #eee;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-}
-.sidebar .logo{
-    width: 10rem;
-    height: 10rem;
-   margin: 0 auto;
-}
-.sidebar .logo img{
-    width: 100%;
-}
-
-.sidebar .navbar .navbar-list{
-    margin-top: 6rem;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
-}
-
-.navbar-list .navbar-link{
- padding: 0.5rem 3rem;
- color: #fff;
- text-decoration: none;
- text-transform: capitalize;
- font-size: 3rem;
- font-weight: 400;
- transition: all 0.6s ease-in-out;
-}
-.navbar-list .navbar-link:hover{
- color: crimson;
- font-size: 4rem;
-}
-
-.profile-popup{
-    width: 20rem;
-    padding:1.5rem;
-    background:#ccc;
-    position: absolute;
-    top: 9rem;
-    right: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px
-               , rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-               display: none;
-}
-.profile-popup.active{
-    display: block;
-}
-.profile-popup a{
-    text-decoration: none;
-    border-bottom: 1px solid grey;
-    padding: 0.5rem 3rem;
-    color: #000;
-    font-size: 2rem;
-}
-
-
-@media screen and (max-width:768px) {
-    .title{
-        display: none;
-    }
+.link:hover{
+    transition: all 0.5s ease-in-out;
+    background:crimson;
+    border-radius: 5px;
+    
 }
