Making Report Section and changing backgrounf image in all files

--- a/students.css
+++ b/students.css
@@ -1,3 +1,8 @@
+body{
+    background:url(./images/Reports/1.avif);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #students{
     margin: 5rem auto;
 }
